feat: создать адаптивную версию

--- a/index.html
+++ b/index.html
@@ -25,10 +25,53 @@
 			<button class="profile__add-btn"></button>
 		</section>
 		<section class="elements">
-
+			<div class="elements__element">
+				<img class="elements__image" src="images/Elements/Karachaevsk.jpg" alt="Карачаевск">
+				<div class="elements__row">
+					<h2 class="elements__name">карачаевск</h2>
+					<button class="elements__like"></button>
+				</div>
+			</div>
+			<div class="elements__element">
+				<img class="elements__image" src="images/Elements/Elbrus.jpg" alt="Карачаевск">
+				<div class="elements__row">
+					<h2 class="elements__name">гора эльбрус</h2>
+					<button class="elements__like"></button>
+				</div>
+			</div>
+			<div class="elements__element">
+				<img class="elements__image" src="images/Elements/Dombai.jpg" alt="Карачаевск">
+				<div class="elements__row">
+					<h2 class="elements__name">домбай</h2>
+					<button class="elements__like"></button>
+				</div>
+			</div>
+			<div class="elements__element">
+				<img class="elements__image" src="images/Elements/Elbrus.jpg" alt="Карачаевск">
+				<div class="elements__row">
+					<h2 class="elements__name">гора эльбрус</h2>
+					<button class="elements__like"></button>
+				</div>
+			</div>
+			<div class="elements__element">
+				<img class="elements__image" src="images/Elements/Dombai.jpg" alt="Карачаевск">
+				<div class="elements__row">
+					<h2 class="elements__name">домбай</h2>
+					<button class="elements__like"></button>
+				</div>
+			</div>
+			<div class="elements__element">
+				<img class="elements__image" src="images/Elements/Karachaevsk.jpg" alt="Карачаевск">
+				<div class="elements__row">
+					<h2 class="elements__name">карачаевск</h2>
+					<button class="elements__like"></button>
+				</div>
+			</div>
 		</section>
 	</main>
-	<fotter class="footer"></fotter>
+	<footer class="footer">
+		<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+	</footer>
 </body>
 
 </html>
