--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
 	<header class="header">
 		<img class="header__logo" src="Images/Header/mesto-russia.svg" alt="логотип место">
 	</header>
+	<div class="popup">
+		<form class="popup__container">
+			<div class="popup__close"></div>
+			<h2 class="popup__mission">Редактировать профиль</h2>
+			<input type="text" class="popup__name">
+			<input type="text" class="popup__description">
+			<button class="popup__submit">Сохранить</button>
+		</form>
+	</div>
 	<main class="content">
 		<section class="profile">
 			<img src="Images/Profile/Avatar.png" alt="фото профиля" class="profile__avatar">
 			<div class="profile__info">
 				<div class="profile__user">
 					<h1 class="profile__name">Жак-Ив Кусто</h1>
-					<button class="profile__edit-btn"></button>
+					<div class="profile__edit-btn"></div>
 				</div>
 				<p class="profile__description">Исследователь океана</p>
 			</div>
-			<button class="profile__add-btn"></button>
+			<div class="profile__add-btn"></div>
 		</section>
 		<section class="elements">
 			<div class="elements__element">
