feat: реализовать действия попапа JS

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<img class="header__logo" src="Images/Header/mesto-russia.svg" alt="логотип место">
 	</header>
 	<div class="popup">
-		<form class="popup__container">
+		<form action="#" class="popup__container">
 			<div class="popup__close"></div>
 			<h2 class="popup__mission">Редактировать профиль</h2>
-			<input type="text" class="popup__name">
-			<input type="text" class="popup__description">
-			<button class="popup__submit">Сохранить</button>
+			<input type="text" name="name" class="popup__name" value="Жак-Ив Кусто">
+			<input type="text" name="description" class="popup__description" value="Исследователь океана">
+			<button type="submit" class="popup__submit">Сохранить</button>
 		</form>
 	</div>
 	<main class="content">
@@ -81,6 +81,7 @@
 	<footer class="footer">
 		<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 	</footer>
+	<script src="script.js"></script>
 </body>
 
 </html>
