--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
 		</section>
 		<section class="elements">
 			<div class="elements__element">
-				<img class="elements__image" src="./images/Elements/Karachaevsk.jpg" alt="Карачаевск">
+				<img class="elements__image" src="./Images/Elements/__Karachaevsk.jpg" alt="Карачаевск">
 				<div class="elements__row">
 					<h2 class="elements__name">карачаевск</h2>
 					<button class="elements__like"></button>
 				</div>
 			</div>
 			<div class="elements__element">
-				<img class="elements__image" src="./images/Elements/Elbrus.jpg" alt="Эльбрус">
+				<img class="elements__image" src="./Images/Elements/__Elbrus.jpg" alt="Эльбрус">
 				<div class="elements__row">
 					<h2 class="elements__name">гора эльбрус</h2>
 					<button class="elements__like"></button>
 				</div>
 			</div>
 			<div class="elements__element">
-				<img class="elements__image" src="./images/Elements/Dombai.jpg" alt="Домбай">
+				<img class="elements__image" src="./Images/Elements/__Dombai.jpg" alt="Домбай">
 				<div class="elements__row">
 					<h2 class="elements__name">домбай</h2>
 					<button class="elements__like"></button>
 				</div>
 			</div>
 			<div class="elements__element">
-				<img class="elements__image" src="./images/Elements/Elbrus.jpg" alt="Эльбрус">
+				<img class="elements__image" src="./Images/Elements/__Elbrus.jpg" alt="Эльбрус">
 				<div class="elements__row">
 					<h2 class="elements__name">гора эльбрус</h2>
 					<button class="elements__like"></button>
 				</div>
 			</div>
 			<div class="elements__element">
-				<img class="elements__image" src="./images/Elements/Dombai.jpg" alt="Домбайк">
+				<img class="elements__image" src="./Images/Elements/__Dombai.jpg" alt="Домбайк">
 				<div class="elements__row">
 					<h2 class="elements__name">домбай</h2>
 					<button class="elements__like"></button>
 				</div>
 			</div>
 			<div class="elements__element">
-				<img class="elements__image" src="./images/Elements/Karachaevsk.jpg" alt="Карачаевск">
+				<img class="elements__image" src="./Images/Elements/__Karachaevsk.jpg" alt="Карачаевск">
 				<div class="elements__row">
 					<h2 class="elements__name">карачаевск</h2>
 					<button class="elements__like"></button>
