--- a/index.html
+++ b/index.html
@@ -12,76 +12,79 @@
 	<header class="header">
 		<img class="header__logo" src="Images/Header/mesto-russia.svg" alt="логотип место">
 	</header>
-	<div class="popup">
-		<form action="#" class="popup__container">
-			<div class="popup__close"></div>
-			<h2 class="popup__mission">Редактировать профиль</h2>
-			<input type="text" name="name" class="popup__name" value="Жак-Ив Кусто">
-			<input type="text" name="description" class="popup__description" value="Исследователь океана">
-			<button type="submit" class="popup__submit">Сохранить</button>
-		</form>
-	</div>
+
 	<main class="content">
 		<section class="profile">
 			<img src="Images/Profile/Avatar.png" alt="фото профиля" class="profile__avatar">
 			<div class="profile__info">
 				<div class="profile__user">
 					<h1 class="profile__name">Жак-Ив Кусто</h1>
-					<div class="profile__edit-btn"></div>
+					<button type="button" class="profile__edit-btn"></button>
 				</div>
 				<p class="profile__description">Исследователь океана</p>
 			</div>
-			<div class="profile__add-btn"></div>
+			<button type="button" class="profile__add-btn"></button>
 		</section>
 		<section class="elements">
-			<div class="elements__element">
+			<article class="elements__element">
 				<img class="elements__image" src="./Images/Elements/__Karachaevsk.jpg" alt="Карачаевск">
 				<div class="elements__row">
 					<h2 class="elements__name">карачаевск</h2>
-					<button class="elements__like"></button>
+					<button type="button" class="elements__like"></button>
 				</div>
-			</div>
-			<div class="elements__element">
+			</article>
+			<article class="elements__element">
 				<img class="elements__image" src="./Images/Elements/__Elbrus.jpg" alt="Эльбрус">
 				<div class="elements__row">
 					<h2 class="elements__name">гора эльбрус</h2>
-					<button class="elements__like"></button>
+					<button type="button" class="elements__like"></button>
 				</div>
-			</div>
-			<div class="elements__element">
+			</article>
+			<article class="elements__element">
 				<img class="elements__image" src="./Images/Elements/__Dombai.jpg" alt="Домбай">
 				<div class="elements__row">
 					<h2 class="elements__name">домбай</h2>
-					<button class="elements__like"></button>
+					<button type="button" class="elements__like"></button>
 				</div>
-			</div>
-			<div class="elements__element">
+			</article>
+			<article class="elements__element">
 				<img class="elements__image" src="./Images/Elements/__Elbrus.jpg" alt="Эльбрус">
 				<div class="elements__row">
 					<h2 class="elements__name">гора эльбрус</h2>
-					<button class="elements__like"></button>
+					<button type="button" class="elements__like"></button>
 				</div>
-			</div>
-			<div class="elements__element">
+			</article>
+			<article class="elements__element">
 				<img class="elements__image" src="./Images/Elements/__Dombai.jpg" alt="Домбайк">
 				<div class="elements__row">
 					<h2 class="elements__name">домбай</h2>
-					<button class="elements__like"></button>
+					<button type="button" class="elements__like"></button>
 				</div>
-			</div>
-			<div class="elements__element">
+			</article>
+			<article class="elements__element">
 				<img class="elements__image" src="./Images/Elements/__Karachaevsk.jpg" alt="Карачаевск">
 				<div class="elements__row">
 					<h2 class="elements__name">карачаевск</h2>
-					<button class="elements__like"></button>
+					<button type="button" class="elements__like"></button>
 				</div>
-			</div>
+			</article>
 		</section>
 	</main>
 	<footer class="footer">
 		<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 	</footer>
-	<script src="script.js"></script>
+	<div class="popup">
+		<div class="popup__container">
+			<button type="button" class="popup__close"></button>
+			<h2 class="popup__mission">Редактировать профиль</h2>
+			<form action="#" class="popup__form">
+				<input type="text" name="name" class="popup__input popup__input_target_name " value="Жак-Ив Кусто">
+				<input type="text" name="description" class="popup__input popup__input_target_description" value="Исследователь океана">
+				<button type="submit" class="popup__submit">Сохранить</button>
+			</form>
+		</div>
+	</div>
+	<script src="scripts/index.js"></script>
 </body>
 
 </html>
