fix: исправить код JS

--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Редактировать профиль</h2>
-			<form action="#" class="popup__form">
+			<form name="user-data" action="#" class="popup__form">
 				<input type="text" name="name" class="popup__input popup__input_target_name " value="Жак-Ив Кусто">
-				<input type="text" name="description" class="popup__input popup__input_target_description" value="Исследователь океана">
+				<input type="text" name="description" class="popup__input popup__input_target_description"
+					value="Исследователь океана">
 				<button type="submit" class="popup__submit">Сохранить</button>
 			</form>
 		</div>
