--- a/index.html
+++ b/index.html
@@ -26,63 +26,50 @@
 			<button type="button" class="profile__add-btn"></button>
 		</section>
 		<section class="elements">
-			<article class="elements__element">
-				<img class="elements__image" src="./Images/Elements/__Karachaevsk.jpg" alt="Карачаевск">
-				<div class="elements__row">
-					<h2 class="elements__name">карачаевск</h2>
-					<button type="button" class="elements__like"></button>
-				</div>
-			</article>
-			<article class="elements__element">
-				<img class="elements__image" src="./Images/Elements/__Elbrus.jpg" alt="Эльбрус">
-				<div class="elements__row">
-					<h2 class="elements__name">гора эльбрус</h2>
-					<button type="button" class="elements__like"></button>
-				</div>
-			</article>
-			<article class="elements__element">
-				<img class="elements__image" src="./Images/Elements/__Dombai.jpg" alt="Домбай">
-				<div class="elements__row">
-					<h2 class="elements__name">домбай</h2>
-					<button type="button" class="elements__like"></button>
-				</div>
-			</article>
-			<article class="elements__element">
-				<img class="elements__image" src="./Images/Elements/__Elbrus.jpg" alt="Эльбрус">
-				<div class="elements__row">
-					<h2 class="elements__name">гора эльбрус</h2>
-					<button type="button" class="elements__like"></button>
-				</div>
-			</article>
-			<article class="elements__element">
-				<img class="elements__image" src="./Images/Elements/__Dombai.jpg" alt="Домбайк">
-				<div class="elements__row">
-					<h2 class="elements__name">домбай</h2>
-					<button type="button" class="elements__like"></button>
-				</div>
-			</article>
-			<article class="elements__element">
-				<img class="elements__image" src="./Images/Elements/__Karachaevsk.jpg" alt="Карачаевск">
-				<div class="elements__row">
-					<h2 class="elements__name">карачаевск</h2>
-					<button type="button" class="elements__like"></button>
-				</div>
-			</article>
+			<template class="elements__elemental">
+				<article class="elements__element">
+					<img class="elements__image">
+					<button class="elements__delete" type="button"></button>
+					<div class="elements__row">
+						<h2 class="elements__name"></h2>
+						<button type="button" class="elements__like"></button>
+					</div>
+				</article>
+			</template>
 		</section>
 	</main>
 	<footer class="footer">
 		<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 	</footer>
-	<div class="popup">
+	<div class="popup popup-profile">
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Редактировать профиль</h2>
-			<form name="user-data" action="#" class="popup__form">
+			<form name="userData" action="#" class="popup__form popup-profile__form">
 				<input type="text" name="name" class="popup__input popup__input_target_name " value="Жак-Ив Кусто">
 				<input type="text" name="description" class="popup__input popup__input_target_description"
 					value="Исследователь океана">
 				<button type="submit" class="popup__submit">Сохранить</button>
 			</form>
+		</div>
+	</div>
+	<div class="popup popup-card">
+		<div class="popup__container">
+			<button type="button" class="popup__close"></button>
+			<h2 class="popup__mission">Новое место</h2>
+			<form name="user-data" action="#" class="popup__form popup-card__form">
+				<input type="text" name="name" class="popup__input popup__input_target_name-card " placeholder="Название">
+				<input type="text" name="description" class="popup__input popup__input_target_link"
+					placeholder="Ссылка на картинку">
+				<button type="submit" class="popup__submit">Создать</button>
+			</form>
+		</div>
+	</div>
+	<div class="popup popup-image">
+		<div class="popup__container popup-image__container">
+			<button type="button" class="popup__close"></button>
+			<img class="popup-image__image">
+			<h2 class="popup-image__name"></h2>
 		</div>
 	</div>
 	<script src="scripts/index.js"></script>
