--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<section class="elements">
 			<template class="elements__elemental">
 				<article class="elements__element">
-					<img class="elements__image">
+					<img class="elements__image" src="-" alt="">
 					<button class="elements__delete" type="button"></button>
 					<div class="elements__row">
 						<h2 class="elements__name"></h2>
@@ -68,7 +68,7 @@
 	<div class="popup popup-image">
 		<div class="popup__container popup-image__container">
 			<button type="button" class="popup__close"></button>
-			<img class="popup-image__image">
+			<img class="popup-image__image" src="-" alt="">
 			<h2 class="popup-image__name"></h2>
 		</div>
 	</div>
