--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 		</div>
 	</div>
 	<div class="popup popup-image">
-		<div class="popup__container popup-image__container">
+		<div class="popup-image__container">
 			<button type="button" class="popup__close"></button>
-			<img class="popup-image__image" src="-" alt="">
-			<h2 class="popup-image__name"></h2>
+			<figure class="popup-image__figure">
+				<img class="popup-image__image" src="-" alt="">
+				<figcaption class="popup-image__name"></figcaption>
+			</figure>
 		</div>
 	</div>
 	<script src="scripts/index.js"></script>
