--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Редактировать профиль</h2>
 			<form name="userData" action="#" class="popup__form popup-profile__form">
-				<input type="text" name="name" class="popup__input popup__input_target_name " value="Жак-Ив Кусто" placeholder="Имя">
+				<input type="text" name="name" class="popup__input popup__input_target_name " value="Жак-Ив Кусто"
+					placeholder="Имя">
 				<input type="text" name="description" class="popup__input popup__input_target_description"
 					value="Исследователь океана" placeholder="Вид деятельности">
 				<button type="submit" class="popup__submit">Сохранить</button>
@@ -69,7 +70,7 @@
 		<div class="popup-image__container">
 			<button type="button" class="popup__close"></button>
 			<figure class="popup-image__figure">
-				<img class="popup-image__image" src="-" alt="">
+				<img class="popup-image__image" src="#" alt="">
 				<figcaption class="popup-image__name"></figcaption>
 			</figure>
 		</div>
