--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Редактировать профиль</h2>
-			<form name="userData" action="#" class="popup__form popup-profile__form" >
-				<input type="text" id="name" class="popup__input popup__input_target_name" value="Жак-Ив Кусто"
+			<form name="userData" action="#" class="popup__form popup-profile__form" novalidate >
+				<input type="text" id="name-input" class="popup__input popup__input_target_name" value="Жак-Ив Кусто"
 					placeholder="Имя" required minlength="2" maxlength="40">
 					<span class="popup__input-error name-input-error"></span>
-				<input type="text" id="description" class="popup__input popup__input_target_description"
+				<input type="text" id="description-input" class="popup__input popup__input_target_description"
 					value="Исследователь океана" placeholder="Вид деятельности" required minlength="2" maxlength="200">
 					<span class="popup__input-error description-input-error">
 					</span>
-				<button type="submit" class="popup__button">Сохранить</button>
+				<button type="submit" class="popup__submit">Сохранить</button>
 			</form>
 		</div>
 	</div>
@@ -61,14 +61,14 @@
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Новое место</h2>
-			<form name="user-image" action="#" class="popup__form popup-card__form">
-				<input type="text" id="nameOfPlace" class="popup__input popup__input_target_name-card" placeholder="Название"
+			<form name="user-image" action="#" class="popup__form popup-card__form" novalidate>
+				<input type="text" id="nameOfPlace-input" class="popup__input popup__input_target_name-card" placeholder="Название"
 					required minlength="2" maxlength="30">
 				<span class="popup__input-error nameOfPlace-input-error"></span>
-				<input type="url" id="linkOfPlace" class="popup__input popup__input_target_link"
+				<input type="url" id="linkOfPlace-input" class="popup__input popup__input_target_link"
 					placeholder="Ссылка на картинку" required>
 				<span class="popup__input-error linkOfPlace-input-error"></span>
-				<button type="submit" class="popup__button">Создать</button>
+				<button type="submit" class="popup__submit">Создать</button>
 			</form>
 		</div>
 	</div>
@@ -81,8 +81,8 @@
 			</figure>
 		</div>
 	</div>
-	<script src="scripts/index.js"></script>
 	<script src="scripts/validate.js"></script>
+	<script src="scripts/index.js"></script>
 </body>
 
 </html>
