--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<button type="button" class="profile__add-btn"></button>
 		</section>
 		<section class="elements">
-			<template class="elements__elemental">
+			<template class="elements__template">
 				<article class="elements__element">
 					<img class="elements__image" src="-" alt="">
 					<button class="elements__delete" type="button"></button>
@@ -81,8 +81,9 @@
 			</figure>
 		</div>
 	</div>
-	<script src="scripts/validate.js"></script>
-	<script src="scripts/index.js"></script>
+	<script src="scripts/Card.js" type="module"></script>
+	<script src="scripts/FormValidator.js" type="module"></script>
+	<script src="scripts/index.js" type="module"></script>
 </body>
 
 </html>
