--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,14 @@
 
 	<main class="content">
 		<section class="profile">
-			<img src="<%=require('./Images/Profile/Avatar.png')%>" alt="фото профиля" class="profile__avatar">
+			<img src="" alt="фото профиля" class="profile__avatar">
+			<div class="profile__avatar-cover"></div>
 			<div class="profile__info">
 				<div class="profile__user">
-					<h1 class="profile__name">Жак-Ив Кусто</h1>
+					<h1 class="profile__name"></h1>
 					<button type="button" class="profile__edit-btn"></button>
 				</div>
-				<p class="profile__description">Исследователь океана</p>
+				<p class="profile__description"></p>
 			</div>
 			<button type="button" class="profile__add-btn"></button>
 		</section>
@@ -31,7 +32,10 @@
 					<button class="elements__delete" type="button"></button>
 					<div class="elements__row">
 						<h2 class="elements__name"></h2>
-						<button type="button" class="elements__like"></button>
+						<div class="elements__like-and-count">
+							<button type="button" class="elements__like"></button>
+							<p class="elements__count-of-likes"></p>
+						</div>
 					</div>
 				</article>
 			</template>
@@ -45,11 +49,11 @@
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Редактировать профиль</h2>
 			<form name="userData" action="#" class="popup__form popup-profile__form" novalidate >
-				<input type="text" id="name-input" name="name" class="popup__input popup__input_target_name" value="Жак-Ив Кусто"
+				<input type="text" id="name-input" name="name" class="popup__input popup__input_target_name" 
 					placeholder="Имя" required minlength="2" maxlength="40">
 					<span class="popup__input-error name-input-error"></span>
-				<input type="text" id="description-input" name="job" class="popup__input popup__input_target_description"
-					value="Исследователь океана" placeholder="Вид деятельности" required minlength="2" maxlength="200">
+				<input type="text" id="description-input" name="about" class="popup__input popup__input_target_description"
+					 placeholder="Вид деятельности" required minlength="2" maxlength="200">
 					<span class="popup__input-error description-input-error">
 					</span>
 				<button type="submit" class="popup__submit">Сохранить</button>
@@ -67,7 +71,7 @@
 				<input type="url" id="linkOfPlace-input" class="popup__input popup__input_target_link" name="link"
 					placeholder="Ссылка на картинку" required>
 				<span class="popup__input-error linkOfPlace-input-error"></span>
-				<button type="submit" class="popup__submit">Создать</button>
+				<button type="submit" class="popup__submit popup__submit_create">Создать</button>
 			</form>
 		</div>
 	</div>
@@ -78,6 +82,27 @@
 				<img class="popup-image__image" src="#" alt="">
 				<figcaption class="popup-image__name"></figcaption>
 			</figure>
+		</div>
+	</div>
+	<div class="popup popup-avatar">
+		<div class="popup__container">
+			<button type="button" class="popup__close"></button>
+			<h2 class="popup__mission">Обновить аватар</h2>
+			<form name="user-avatar" action="#" class="popup__form popup-avatar__form" novalidate>
+				<input type="url" id="linkAvatar-input" class="popup__input popup__input_target_link-avatar" name="avatar" placeholder="Ссылка на картинку"
+					required>
+				<span class="popup__input-error popup-avatar__input-error linkAvatar-input-error"></span>
+				<button type="submit" class="popup__submit">Сохранить</button>
+			</form>
+		</div>
+	</div>
+	<div class="popup popup-delete-card">
+		<div class="popup__container">
+			<button type="button" class="popup__close"></button>
+			<h2 class="popup__mission popup-delete-card__mission">Вы уверены?</h2>
+			<form name="user-avatar" action="#" class="popup__form popup-avatar__form" novalidate>
+				<button type="submit" class="popup__submit">Да</button>
+			</form>
 		</div>
 	</div>
 </body>
