feat: add server

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 	<main class="content">
 		<section class="profile">
-			<img src="" alt="фото профиля" class="profile__avatar">
+			<img src="#" alt="фото профиля" class="profile__avatar">
 			<div class="profile__avatar-cover"></div>
 			<div class="profile__info">
 				<div class="profile__user">
