feat: add server

--- a/src/index.html
+++ b/src/index.html
@@ -89,9 +89,9 @@
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Обновить аватар</h2>
 			<form name="user-avatar" action="#" class="popup__form popup-avatar__form" novalidate>
-				<input type="url" id="linkAvatar-input" class="popup__input popup__input_target_link-avatar" name="avatar" placeholder="Ссылка на картинку"
+				<input type="url" id="link-аvatar-input" class="popup__input popup__input_target_link-avatar" name="avatar" placeholder="Ссылка на картинку"
 					required>
-				<span class="popup__input-error popup-avatar__input-error linkAvatar-input-error"></span>
+				<span class="popup__input-error popup-avatar__input-error link-аvatar-input-error"></span>
 				<button type="submit" class="popup__submit">Сохранить</button>
 			</form>
 		</div>
@@ -100,7 +100,7 @@
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission popup-delete-card__mission">Вы уверены?</h2>
-			<form name="user-avatar" action="#" class="popup__form popup-avatar__form" novalidate>
+			<form name="user-avatar" action="#" class="popup__form" novalidate>
 				<button type="submit" class="popup__submit">Да</button>
 			</form>
 		</div>
