--- a/src/index.html
+++ b/src/index.html
@@ -89,9 +89,9 @@
 			<button type="button" class="popup__close"></button>
 			<h2 class="popup__mission">Обновить аватар</h2>
 			<form name="user-avatar" action="#" class="popup__form popup-avatar__form" novalidate>
-				<input type="url" id="link-аvatar-input" class="popup__input popup__input-target-link-avatar" name="avatar" placeholder="Ссылка на картинку"
+				<input type="url" id="linkAvatarInput" class="popup__input popup__input-target-link-avatar" name="avatar" placeholder="Ссылка на картинку"
 					required>
-				<span class="popup__input-error popup__input-error_content_avatar link-аvatar-input-error"></span>
+				<span class="popup__input-error popup__input-error_content_avatar linkAvatarInput-error"></span>
 				<button type="submit" class="popup__submit">Сохранить</button>
 			</form>
 		</div>
